Add test for SentrySpark